# enterprise_nervous_system

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/: prompts.py
benchmarks/: evaluator.py  judge.py  runner.py  scenarios.py
benchmarks/results/: run_latest.json
config/: settings.py
data/loaders/: es_ingestor.py  log4shell_fetcher.py  oracle_fetcher.py  text4shell_fetcher.py
data/oracles/: log4shell.json  text4shell.json
data/seeds/: config_error_commits.json  config_error_logs.json  config_error_tickets.json  log4shell_commits.json  log4shell_logs.json  log4shell_tickets.json  oom_commits.json  oom_logs.json  oom_tickets.json  text4shell_commits.json  text4shell_logs.json  text4shell_tickets.json
mcp_servers/: github_mcp.py  jira_mcp.py  logs_mcp.py
schemas/: postmortem.py
swarm/: orchestrator.py
tests/: test_mcp_servers.py
